Preuve Rice + Point fixe corrigées

--- a/00_Preambule.tex
+++ b/00_Preambule.tex
@@ -8,5 +8,8 @@ Ce syllabus est sous licence Creative Commons CC-BY-SA.  Les étudiants sont enc
 Ce document se base sur la \emph{Synthèse de Calculabilité Q6 - LINGI1123}, produite notamment par Floran Hachez, Lionel Nobel Lena Peschke et François Robinet lorsqu'ils ont suivi ce cours.  Cette synthèse a été rédigée sous licence Creative Commons CC-BY-SA et est disponible à l’adresse suivante
 \url{https://github.com/Gp2mv3/Syntheses}
 
+Ces notes contiennent certainement des erreurs.  Soyez vigilants.  Vos contributions sont les bienvenues pour améliorer et corriger ces notes à l'adresse suivante
+\url{https://github.com/UCL-INGI/LINGI1123-Calculabilite}
+
 
 
