Conclusion très partielle

--- a/03_ResultatsFondamentaux.tex
+++ b/03_ResultatsFondamentaux.tex
@@ -1020,7 +1020,7 @@ d'autres problèmes non calculables. Il y a d'autres exemples sur les grammaires
 % subsection nombres_calculables (end)
 
 \section{Conclusion}
-
+[Conclusion très partielle...]\\
 Le théorème S-m-n permet de démontrer le théorème du point fixe.
 Le théorème du point fixe est un résultat central de la calculabilité. Il
 implique le théorème de Rice, la non-récursivité de K et la non-calculabilité
