Ajout exemple limites #1 + completion détection virus #4 + divers corrections
* Ajout d'exemples de limites dans la section "qu'est ce que la calculabilité"
* Ajout de divers informations des slides dans les sections du chapitre 1
* Quelques corrections et clarification de certains propos dans détection de virus
* Quelques corrections diverses dans les chapitres 2 et 3
* Ajout d'une option dans le script update.sh pour automatiquement push les commits locaux vers son fork (en considérant qu'il soit sur la remote origin)

--- a/02_Concepts.tex
+++ b/02_Concepts.tex
@@ -465,7 +465,7 @@ Peut-on encore aller plus loin?  Oui,  il suffit de considérer  l'ensemble des 
 l'ensemble des sous-ensemble de $\R$ ($2^{\R}$).  Ces ensembles ne peuvent pas être mis en bijection avec $\R$.
 Encore plus loin ?  Oui, en prenant l'ensemble des sous-ensembles de l'ensemble défini juste avant.  On obtient alors $2^{2^{\R}}$.  Et ainsi de suite à l'infini \ldots
 
-On peut ainsi schématiser la taille des ensembles comme ceci:\footnote{Pour exprimer la taille d'un ensemble non-énumérable, on peut il existe les \textbf{alephs}. Ce sont les cardinaux des ensembles infinis. On a donc la taille de $\N$ qui vaut $\aleph_0$ (dit aleph zéro), de $\R$ qui vaut $\aleph_1$, de $2^{\R}$ qui vaut $\aleph_2$,\dots }
+On peut ainsi schématiser la taille des ensembles comme ceci:\footnote{Pour exprimer la taille d'un ensemble non-énumérable, il existe les \textbf{alephs}. Ce sont les cardinaux des ensembles infinis. On a donc la taille de $\N$ qui vaut $\aleph_0$ (dit aleph zéro), de $\R$ qui vaut $\aleph_1$, de $2^{\R}$ qui vaut $\aleph_2$, \dots }
 $$\Phi < \{1,2,3\} < \N < \R < 2^{\R} < 2^{2^{\R}} < 2^{2^{2^{\R}}} \dots$$
 
 Est-ce qu'il existe encore plus grand? Oui, effectivement, l'union de tous ces ensembles 
