--- a/03_ResultatsFondamentaux.tex
+++ b/03_ResultatsFondamentaux.tex
@@ -513,8 +513,7 @@ dans Q.
 	Si les programmes de Q ne calculaient pas que des fonctions totales, alors ça n'aurait pas posé de problèmes, car si $interpret(d,d)=\bot$, $interpret(d,d)+1=\bot$ et il n'y a plusa de contradiction.  Un programme qui ne se termine pas + quelque chose, reste un programme qui ne se termine pas.
 \end{myrem}
 
-\subsection{Implication du théorème \ref{Hoare_Allison}, Hoare Allison }
-
+\subsection[Implication du théorème de Hoare Allison]{Implication du théorème \ref{Hoare_Allison}, Hoare Allison}
 \begin{myprop}
 	Si un langage (\textbf{non trivial}) ne permet que le calcul de fonctions totales, alors :
 	\begin{itemize}
