Ajouts 2/3 exemples section 2.1 #9

--- a/ingi1123.sty
+++ b/ingi1123.sty
@@ -21,6 +21,7 @@ version={4.0},
 \RequirePackage[T1]{fontenc}
 \RequirePackage{lmodern}
 \RequirePackage{palatino}
+\RequirePackage{pifont}
 
 \RequirePackage[francais]{babel}    % Pour la langue française
 %\RequirePackage{iflang}
