--- a/03_ResultatsFondamentaux.tex
+++ b/03_ResultatsFondamentaux.tex
@@ -131,7 +131,8 @@ Soit $A\subseteq \N$
     \end{itemize}
 
     \begin{proof}
-      $f$ est une fonction d'énumération (elle peut répéter plusieurs fois un élément, mais ce n'est pas gênant).
+      Si A est vide, il est possible de créer un programme Q qui va déterminer si x $\in$ A. Etant donné que A est vide, aucun élément n'appartient à cet ensemble. Il suffit simplement de créer un programme renvoyant toujours $\bot$. \\
+      Concernant la deuxième la condition, $f$ est une fonction d'énumération (elle peut répéter plusieurs fois un élément, mais ce n'est pas gênant).
       À l'aide d'un programme $P_f$ qui calcule $f$,
       on appelle $P_f(0), P_f(1), P_f(2), \ldots$
       jusqu'à ce que $P_f(k) = x$ où on retourne $1$.
