Ch03.11: Conséquence Point fixe #34 Intro

--- a/03_ResultatsFondamentaux.tex
+++ b/03_ResultatsFondamentaux.tex
@@ -797,6 +797,10 @@ print(d);
 
 \section{Théorème du point fixe}
 \label{sub:th_or_me_du_point_fixe}
+Ce théorème a pour but de répondre à la question : \\
+\textit{Est-il possible de déterminer les propriétés d'un programme via un algorithme ?}\\
+Il serait très intéressant de pouvoir analyser les propriétés d'un programme (via une fonction calculable), afin de déterminer si un programme possède telle ou telle autre propriété. Par exemple, savoir si un programme va sur internet, ou bien savoir si deux programmes sont équivalents (qu'il calculent la même fonction), ou encore savoir si un programme se termine ou non ... Ce dernier exemple devrait vous mettre la puce à l'oreille, quant à la raison de ce théorème.\\
+Cette nouvelle, mauvaise au niveau scientifique, est pourtant très bénéfique pour le métier de l'informatique, c'est l'assurance que l'intervention humaine sera sera toujours requise pour résoudre les questions intéressantes !
 \begin{mytheo}[Point fixe]
 	\label{point-fixe}
     Soient $n \geq 0$ et $f$ : fonction totale
