--- a/02_Concepts.tex
+++ b/02_Concepts.tex
@@ -123,7 +123,7 @@ ont le même cardinal s'il existe une bijection entre eux.
 \begin{mydef}[Ensemble énumérable]
 	Un ensemble est énumérable ou dénombrable s'il est fini ou s'il a le même cardinal que $\N$.
 \end{mydef}
-Une autre manière plus intuitive de voir si un un ensemble infini est  énumérable est de voir s'il existe une énumération de ses éléments.
+Une autre manière plus intuitive de voir si un ensemble infini est énumérable est de voir s'il existe une énumération de ses éléments.
 
 \begin{myprop} 
 Un ensemble infini $E$ est énumérable s'il existe une liste de ses éléments  
