--- a/04_modeles.tex
+++ b/04_modeles.tex
@@ -231,7 +231,7 @@ possibles. On a donc plus une fonction de transition mais on a maintenant une
 relation de transition.
 
 \paragraph{} De même que pour un ND programme, un mot est accepté par un NDFA
-s\’il existe au moins une exécution ou l'état final est acceptant. Dans l'autre
+s'il existe au moins une exécution où l'état final est acceptant. Dans l'autre
 sens, un
 mot n'est pas accepté si aucune exécution ne se termine avec l'état final
 acceptant.
@@ -943,7 +943,7 @@ forme réduite.
 
 \begin{myprop}
 	Une expression lambda est non définie si, peu importe le choix de
-	réduction, on n\’arrive pas à une forme réduite.
+	réduction, on n'arrive pas à une forme réduite.
 \end{myprop}
 
 \begin{mytheo}[Church-Rosser] Si 2 séquences de réductions d'une expression
