fix missing $ in ResultatFondamentaux

--- a/03_ResultatsFondamentaux.tex
+++ b/03_ResultatsFondamentaux.tex
@@ -906,7 +906,7 @@ Ce qui conclut notre démonstration.
     Comme $A$ est récursif, la fonction $f$ est total calculable.
     Dès lors, par le théorème du point fixe, il existe $k$ tel que
     \[ \phi_{f(k)} = \phi_k \]
-    La valeur $kE est-elle dans $A$ ou dans $\bar{A}$ ?
+    La valeur $kE$ est-elle dans $A$ ou dans $\bar{A}$ ?
     \begin{itemize}
       \item Si $k \in A$, alors $f(k)=m$.  On a donc $\phi_m = \phi_k$, ce qui est contradictoire avec (1) car 
        $m \in \bar{A}$.
